fix(): Top padding on safari, links, and speed up fadeInUp animation

--- a/assets/scss/components/home_slides/_vue.scss
+++ b/assets/scss/components/home_slides/_vue.scss
@@ -1,12 +1,8 @@
 section#slide-ionic-vue {
-  padding-top: 123px !important;
+  padding-top: 0px !important;
   padding-bottom: 230px !important;
 
   clear: both;
-
-  @media screen and (max-width: 768px) {
-    padding-top: 30vh !important;
-  }
 
   .arrow {
     white-space: pre;
@@ -50,10 +46,10 @@ section#slide-ionic-vue {
         &:nth-of-type(1) {
         }
         &:nth-of-type(2) {
-          transition-delay: .2s;
+          transition-delay: .1s;
         }
         &:nth-of-type(3) {
-          transition-delay: .4s;
+          transition-delay: .3s;
         }
       }
     }
@@ -83,13 +79,13 @@ section#slide-ionic-vue {
 
       .activateOnScroll {
         &:nth-of-type(1) {
-          transition-delay: .8s;
+          transition-delay: .5s;
         }
         &:nth-of-type(2) {
-          transition-delay: 1s;
+          transition-delay: .6s;
         }
         &:nth-of-type(3) {
-          transition-delay: 1.2s;
+          transition-delay: .8s;
         }
       }
     }
@@ -103,7 +99,7 @@ section#slide-ionic-vue {
     margin-bottom: 12px;
 
     &.activateOnScroll {
-      transition-delay: 1.6s;
+      transition-delay: 1s;
     }
 
     .button {
@@ -158,7 +154,7 @@ section#slide-ionic-vue {
     display: inline-block;
 
     &.activateOnScroll {
-      transition-delay: 1.8s;
+      transition-delay: 1.1s;
     }
   }
 }
